--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,3 +81,9 @@ padding: 0;
     /* float: left;
     margin-right: 20px;  */
 }
+.container .firmas{
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(500px,1fr));
+  gap: 7px;
+
+}
