--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,3 +87,11 @@ padding: 0;
   gap: 7px;
 
 }
+.b-finales{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.b-anchof{
+  width: 200px;
+}
