--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,7 +82,7 @@ padding: 0;
     margin-right: 20px;  */
 }
 .container .firmas{
-  display: flex;
+  display: grid;
   grid-template-columns: repeat(auto-fill,minmax(500px,1fr));
   gap: 7px;
 
