Se crea historial de actas

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,3 +95,9 @@ padding: 0;
 .b-anchof{
   width: 200px;
 }
+
+.enlaces{
+  text-decoration: none;
+  font-size: 18px;
+  color:rgb(223, 79, 79)
+}
