--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+/* Variables de color */
+:root{
+  --color_americas:#982993;
+  --color_texto_botones:#F8FAFC;
+  --color_hover_botones:#915c8e;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -99,5 +105,29 @@ padding: 0;
 .enlaces{
   text-decoration: none;
   font-size: 18px;
-  color:#982993;
+  color:white;
+  cursor: pointer;
+  transform: scale(1);
+  transition: all 0.3s ease-in;
+}
+.enlaces:hover{
+  transform: scale(0.90);
+}
+.cabeceras_tabla th{
+  background-color: var(--color_americas);
+  color: aliceblue;
+}
+.morado_boton{
+  border-color: none;
+  color: var(--color_texto_botones);
+  transition: background-color 0.3s ease-in;
+  background-color: var(--color_americas);
+}
+.morado_boton:hover{
+  background-color: var(--color_texto_botones);
+  color: var(--color_hover_botones);
+}
+.morado_boton:active{
+  background-color: var(--color_texto_botones);
+  color: var(--color_hover_botones);
 }
