--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,7 +105,7 @@ padding: 0;
 .enlaces{
   text-decoration: none;
   font-size: 18px;
-  color:white;
+  color:var(--color_texto_botones);
   cursor: pointer;
   transform: scale(1);
   transition: all 0.3s ease-in;
