ajuste de interfaces

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 /* Variables de color */
 :root{
-  --color_americas:#982993;
+  --color_americas:#6922c7;
   --color_texto_botones:#F8FAFC;
   --color_hover_botones:#915c8e;
 }
