Habilitar campañas, pagina donde el gestor puede mirar sus actas

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+*{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 /* Variables de color */
 :root{
   --color_americas:#6922c7;
